--- a/client/src/assets/scss/layout/_navBar.scss
+++ b/client/src/assets/scss/layout/_navBar.scss
@@ -22,3 +22,9 @@
     padding-right: 120px;
 }
 
+.navBar-reload{
+    width: 45px;
+    height: 45px;
+    margin-left: 40px;
+    margin-top: -5px;
+}
