--- a/client/src/assets/scss/layout/_addUserBotton.scss
+++ b/client/src/assets/scss/layout/_addUserBotton.scss
@@ -3,3 +3,101 @@
     flex-direction: column;
     justify-content:end;
 }
+
+
+.overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.493);
+    z-index: 999; 
+}
+
+.overlay.active {
+    display: block;
+}
+  
+.popup {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+    border-radius: 8px;
+}
+  
+
+.popup form {
+    width: 800px; 
+    height: auto; 
+    margin: 0 auto;
+}
+
+.hr-line{
+    width: calc(100% + 40px);
+    margin-left: -20px;
+    margin-right: -20px;
+    color: rgba(211, 211, 211, 0.747);
+}
+
+.post-user-popup{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+}
+
+.close-pop-up{
+    border: none;
+    background-color: white;
+    cursor: pointer;
+    font-size: 20px;
+    color: rgb(167, 167, 167);
+}
+
+.title-popup-form{
+    font-size: 18px;
+}
+
+.popup-form {
+    width: 400px;
+    margin: 0 auto;
+}
+  
+.form-row {
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 30px;
+}
+
+.form-column {
+    flex: 1;
+    margin-right: 10px;
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-form-post{
+    display: flex;
+    justify-content: end;
+
+}
+
+.input-pop-form{
+    padding: 10px;
+    border-radius: 8px;
+    border: 1px solid lightgray;
+    margin-top: 8px;
+}
+
+.errors{
+    color:red;
+    font-size: 11px;
+}
