--- a/client/src/assets/scss/layout/_table.scss
+++ b/client/src/assets/scss/layout/_table.scss
@@ -14,3 +14,12 @@
 .status-active{
     color: green;
 }
+
+.btns-detele-user{
+    display: flex;
+    justify-content:end;
+}
+
+.btn-cancel{
+    margin-right: 12px;
+}
